// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageInner component is rendered 1`] = `
<main
  class="euiPageInner css-tpepwg-euiPageInner"
/>
`;

exports[`_EuiPageInner is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageInner testClass1 testClass2 css-tpepwg-euiPageInner"
  data-test-subj="test subject string"
/>
`;

exports[`_EuiPageInner paddingSize l is rendered 1`] = `
<div
  class="euiPageInner css-1efzufg-euiPageInner-l"
/>
`;

exports[`_EuiPageInner paddingSize m is rendered 1`] = `
<div
  class="euiPageInner css-1vi36bk-euiPageInner-m"
/>
`;

exports[`_EuiPageInner paddingSize none is rendered 1`] = `
<div
  class="euiPageInner css-tpepwg-euiPageInner"
/>
`;

exports[`_EuiPageInner paddingSize s is rendered 1`] = `
<div
  class="euiPageInner css-gadb4n-euiPageInner-s"
/>
`;

exports[`_EuiPageInner paddingSize xl is rendered 1`] = `
<div
  class="euiPageInner css-1i5sda6-euiPageInner-xl"
/>
`;

exports[`_EuiPageInner paddingSize xs is rendered 1`] = `
<div
  class="euiPageInner css-ajj8tr-euiPageInner-xs"
/>
`;

exports[`_EuiPageInner panelled is rendered 1`] = `
<div
  class="euiPageInner css-4m7fv6-euiPageInner-panelled"
/>
`;
